tests/reference/asr-bindc_02-5092d8e.stderr
semantic error: Type mismatch in procedure call; the types must be compatible
 --> tests/errors/bindc_02.py:9:24
  |
9 |     s: Struct = Struct(int32obj)
  |                        ^^^^^^^^ type mismatch (passed argument type is i32 but required type is CPtr)
  |
5 |     cptr_member: CPtr
  |                  ^^^^ type mismatch (passed argument type is i32 but required type is CPtr)


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
